feat(ncurse): swap core movement and print structure out for ncurse

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -4,15 +4,21 @@ project(devos_core LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Source files
+# Find the ncurses library (aliased as Curses)
+find_package(Curses REQUIRED)
+include_directories(${CURSES_INCLUDE_DIR})
+
+# Source files for the static library
 add_library(devos_core STATIC
     src/dungeon.cpp
-    src/generator.cpp
     src/player.cpp
+    src/generator.cpp
 )
 
 target_include_directories(devos_core PUBLIC include)
 
 # Demo executable
 add_executable(devos_demo src/main.cpp)
-target_link_libraries(devos_demo PRIVATE devos_core)
+
+# Link the executable against our library and the ncurses library
+target_link_libraries(devos_demo PRIVATE devos_core ${CURSES_LIBRARY})
